--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,10 @@ publishDir = "docs"
   [module.hugoVersion]
     extended = true
     min = "0.92.0"
-    
+
+[markup.goldmark.renderer]
+  unsafe = true
+
 [params]
   google_analytics_id=""
 
